@@ -18,6 +18,8 @@ Changes in ATK 5.3.1
 + Added default configs/ directory to skel, including readme file. [Ivo]
 + Added str_replace javascript function to ATK javascript tools. [Boy]
 + Added html2specialchars function. [Boy]
++ Added NF_ADDAFTERADD node flag to continue adding records after
+  adding a record. [Peter]
 * Sorting on atkManyToOneRelation columns now sorts on the actual value
   instead of on the id. [Ivo]
 * Moved addOnChangeHandler() to atkAttribute. [Boy]
